# convert-to-mp4

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  release.yml
src/convert_to_mp4/: __init__.py  audio.py  cli.py  converter.py  ffmpeg.py  presets.py  progress.py
tests/: conftest.py  test_audio.py  test_cli.py  test_converter.py  test_ffmpeg.py  test_integration.py  test_presets.py  test_upgrade.py
